test/expressions/exponentiation/realParamExp7.good
realParamExp7.chpl:3: In function 'testit':
realParamExp7.chpl:4: error: Initializing parameter 'res' to value not known at compile time
  realParamExp7.chpl:8: called as testit(param exp = 7)
